input.css
:root {
    --main-bg-color: #BC1321;
    --darker-main-bg-color: #880d18;
}

@tailwind base;
@tailwind components;
@tailwind utilities;
@layer utilities {
    html, body { height: 100%;}

    body {
        font-family: Lato, sans-serif;
    }

    h1  {
        font-size: 3rem;
    }

    h2  {
        font-size: 2.5rem;
        margin: 2px;
        font-weight: bold;
        text-align: center;
    }

    h3  {
        font-size: 2rem;
        margin: 2px;
    }

    p {
        margin: 10px 0;
    }

    a {
        color: #428bca;
        text-decoration: underline;
    }

    .uncommon-a {
        color: white;
        text-decoration: none;
    }

    .nav header a.brand {
        font-size: 1.4em;
        margin-left: 5px;
    }

    .red {
        color: var(--main-bg-color);
    }

    .navheaderColor {
        background-color: rgb(51, 51, 51);
        color: #FFF;
    }

    .header {
        padding: 40px 0;
        background-color: #000;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .header svg {
        width: 45%;
        max-height: 200px;
    }

    .header-title {
        padding-top: 40px;
        font-size: 3rem;
        line-height: 1;
        text-align: center;
        color: #FFF;
    }

    .header-teaser {
        color: #FFF;
        margin-top: 0;
        text-align: center;
        font-size: 1.75em;
    }

    .home {
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 20px;
    }

    .home-title {
        text-align: center;
    }

    .home-ticketing {
        margin-top: 40px;
        width: 100%;
        height: 485px;
        scrolling:"auto";
        frameborder:"0";
        id:"yurplan-widget-89504";
        data-id:"89504";
    }

    .home-ticketing-disclaimer {
        font-size: .75rem;
        font-style: italic;
    }

    .venue {
        padding: 20px 300px;
    }

    .faq {
        padding: 20px 300px;
    }

    .venue-title {
        margin-bottom: 20px;
    }

    .venue-reach {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 20px;
    }

    .venue-reach-map {
        border: 0;
        min-width: 500px;
    }

    .sponsors {
        padding: 20px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        border-top: 1px solid rgba(15,18,36,0.06);
    }

    .sponsors-containers {
        padding: 20px;
        display: flex;
        flex-direction: row;
        justify-content: center;
    }

    .sponsors-platine-logo {
        width: 400px;
        height: 200px;
        padding: 0 20px;
    }

    .sponsors-gold-logo {
        width: 200px;
        height: 100px;
        padding: 0 10px;
    }

    .sponsors-silver-logo {
        width: 100px;
        height: 50px;
        padding: 0 5px;
    }

    .footer {
        color: #FFF;
        padding: 20px 200px;
        background-color: #000;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .footer-menu {
        width: 100%;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .footer-networks-link {
        color: #428bca;
        text-decoration: none;
    }

    .footer-newsletter {
        text-align: right;
    }

    .footer-newsletter-form {
        display: flex;
        justify-content: flex-end;
    }

    .footer-newsletter-form-button {
        background-color: var(--main-bg-color);
        padding: 2px 5px;
        border-radius: 5px;
        font-size: 14px;
        margin-left: 10px;
    }

    .footer-newsletter-form-button:hover {
        background-color: var(--darker-main-bg-color);
    }

    .footer-networks h3, .footer-newsletter h3 {
        font-size: 1.75em;
        line-height: 1.25;
        padding-bottom: 10px;
    }

    .footer-copyright {
        padding-top: 20px;
    }

    .footer-copyright-io {
        margin-right: 4px;
    }


    /* Mobile phone */
    @media only screen and (max-width: 600px) {
        .footer {
            padding: 20px 20px;
        }

        .footer-menu {
            width: 100%;
            display: flex;
            flex-direction: column;
            justify-content: center;
        }

        .footer-networks {
            text-align: center;
        }

        .footer-newsletter {
            text-align: center;
        }

        .footer-newsletter-form {
            display: flex;
            justify-content: center;
        }
    }

    /* Tablet */
    @media only screen and (max-width: 1280px) {
        .venue {
            padding: 20px;
        }

        .faq {
            padding: 20px;
        }

        .venue-reach-map {
            border: 0;
        }

        .footer {
            padding: 20px 20px;
        }

    }

}

